test/SILGen/diagnose_duplicate_functions.code
// RUN: %target-language-emit-silgen %s -o /dev/null -verify

@_silgen_name("foo")
fn a(_ x: Int) -> Int { // expected-note {{other definition here}}
  return x
}

@_silgen_name("foo")
fn b(_ x: Int) -> Int { // expected-error {{multiple definitions of symbol 'foo'}}
  return x
}

@_cdecl("bar")
fn c(_ x: Int) -> Int { // expected-note {{other definition here}}
  return x
}

@_cdecl("bar")
fn d(_ x: Int) -> Int { // expected-error {{multiple definitions of symbol 'bar'}}
  return x
}
